atualizacão de leitura por linha